samples/_failures_safe/1761260092_d686db_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f062a1c5.c: In function ‘main’:
./samples/SAFE/__tmp_f062a1c5.c:161:10: error: ‘size’ undeclared (first use in this function); did you mean ‘size_t’?
  161 |     for (size
      |          ^~~~
      |          size_t
./samples/SAFE/__tmp_f062a1c5.c:161:10: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_f062a1c5.c:161:14: error: expected ‘;’ at end of input
  161 |     for (size
      |              ^
      |              ;
./samples/SAFE/__tmp_f062a1c5.c:161:5: error: expected declaration or statement at end of input
  161 |     for (size
      |     ^~~
